[build-system]
requires = ["setuptools"]
build-backend = 'setuptools.build_meta'

[project]
name = "huawei-lte-api"
license = 'LGPL-3.0'
dynamic = ["version"]
requires-python = ">= 3.9"
description = "API For huawei LAN/WAN LTE Modems."

classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Environment :: Console',
    'Intended Audience :: Developers',
    'Operating System :: OS Independent',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Programming Language :: Python :: 3.14',
    'Topic :: Software Development',
]

dependencies = [
    "requests",
    "xmltodict",
    "pycryptodomex"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "mypy",
    "types-requests",
    "types-setuptools",
]
test = ["pytest", "requests-mock"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[[project.authors]]
name = "Adam Schubert"
email = "adam.schubert@sg1-game.net"


[project.urls]
Homepage = "https://github.com/Salamek/huawei-lte-api"
"Release notes" = "https://github.com/Salamek/huawei-lte-api/releases"


[tool.setuptools.dynamic]
version = {attr = "huawei_lte_api.__version__"}

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*"]


[tool.ruff]
line-length = 170

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "D", # Comments
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  # (keep order of ignores here same as ^there for maintainability)
  # https://github.com/astral-sh/ruff/issues/8175
  "W191",
  "E111",
  "E114",
  "E117",
  "D206",
  "D300",
  "Q000",
  "Q001",
  "Q002",
  "Q003",
  "COM812",
  "COM819",
  "ISC001",
  "ISC002",
]

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str"]
max-args = 10
max-branches = 16
max-returns = 10


[tool.ruff.lint.per-file-ignores]
"huawei_lte_api/*" = ["N999", "FBT001", "FBT002"]  # fixing FBT001 & FBT002 =boolean typed arguments is BC, ignore for now
"examples/*" = ["T201", "T203"]  # print, pprint
"huawei_lte_api/exceptions.py" = ["N818"]  # Wrong exception suffix, should be Error instead of Exception, add *Error with BC like this class MissingFieldError(MissingFieldException): mark *Exception deprecated
"huawei_lte_api/api/User.py" = ["PYI034"]  # PYI034 `__enter__` methods in classes like `UserSession` usually return `self` at runtime, fixing this requires typing_extensions for py3.9... so lets wait a bit till we drop py3.9 support
"huawei_lte_api/Session.py" = ["PYI034"]  # PYI034 `__enter__` methods in classes like `UserSession` usually return `self` at runtime, fixing this requires typing_extensions for py3.9... so lets wait a bit till we drop py3.9 support
"huawei_lte_api/Connection.py" = ["PYI034"]  # PYI034 `__enter__` methods in classes like `UserSession` usually return `self` at runtime, fixing this requires typing_extensions for py3.9... so lets wait a bit till we drop py3.9 support
"huawei_lte_api/Client.py" = ["PLR0915"]  # PLR0915 Too many statements
"huawei_lte_api/api/Sms.py" = ["DTZ005"]  # DTZ005 naive datetimes used, needs testing if we want to use timezone avare datetimes
"huawei_lte_api/api/SdCard.py" = ["DTZ005"]  # DTZ005 naive datetimes used, needs testing if we want to use timezone avare datetimes
"huawei_lte_api/Tools.py" = ["DTZ007"]  # DTZ007 naive datetimes used, needs testing if we want to use timezone avare datetimes
"tests/*" = ["S101", "PLR2004"]  # Use of assert detected


[tool.mypy]
files = ["huawei_lte_api", "tests"]
python_version = 3.9
strict = true
# Make it bit lax
show_error_codes = true
ignore_missing_imports = true
allow_any_generics = true
warn_return_any = false
warn_unreachable = false
disallow_subclassing_any = false
disallow_untyped_decorators = false
exclude = "(.venv/.*|build/.*)"


[tool.pytest.ini_options]
# Tell pytest where to look for tests
testpaths = [
    "tests",
]

# Pattern to match test files
python_files = [
    "test_*.py",
]